# favkit

./: .cursorrules  .gitignore  .pre-commit-hooks.nix  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  bacon.toml  code-editor-rules.md  default_10520710169582726663_0_20220.profraw  default_10520710169582726663_0_20222.profraw  flake.nix  repr_demo  rust-toolchain.toml  rustfmt.toml  shell.nix
.config/: nextest.toml
.github/workflows/: release-please.yml  rust.yml
core-foundation/core-services/: .cargo-checksum.json  Cargo.toml
docs/: architecture.md  development.md  requirements.md
docs/adr/: 0001-initial-architecture.md  0002-clean-architecture-approach.md  0003-nix-development-environment.md  0004-macos-api-integration.md  0005-error-handling.md  0006-release-please-automation.md  template.md
src/: cf_wrapper.rs  constants.rs  error.rs  errors.rs  favorites.rs  item.rs  lib.rs  main.rs  sidebar.rs  types.rs  url_handler.rs
src/favorites/: macos.rs  mod.rs
src/finder/: display_name.rs  errors.rs  favorites.rs  macos.rs  macos_impl.rs  macos_url.rs  mod.rs  repository.rs  sidebar.rs  sidebar_item.rs  target.rs
src/finder/sidebar/: item.rs  mod.rs  section.rs  target.rs
src/finder/system/: api.rs  mod.rs  special_dirs.rs  url.rs
src/sidebar/: cf.rs  error.rs  finder.rs  macos_api.rs  mod.rs  path.rs  sidebar_api.rs  tests.rs  traits.rs  url.rs
src/system/: api.rs  core_foundation.rs  mod.rs
tests/: acceptance.rs  array_test.rs  finder.rs  integration.rs  repository.rs  sidebar_test.rs  sidebar_tests.rs  snapshot_test.rs  test_utils.rs
tests/common/: mod.rs
tests/mock/: builder.rs  cf_favorites.rs  display_name_ref.rs  favorites.rs  favorites_ref.rs  handle.rs  mac_os_api.rs  mock_builder.rs  mod.rs  sidebar_items.rs  snapshot.rs  url_ref.rs
(+21 files in other folders)
