[package]
name = "favkit"
version = "0.1.0"
edition = "2024"
description = "A tool to manage macOS Finder sidebar items"
authors = ["Maksim Shcherbo <max@happygopher.nl>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "favkit"
path = "src/main.rs"

[dependencies]
core-foundation = "0.10.0"
core-services = "1.0.0"
thiserror = "2.0.4"
dirs = "5.0"

[dev-dependencies]
favkit = { path = ".", features = ["test-utils"] }
coverage-helper = "0.2"
cargo-llvm-cov = "0.6.14"

[features]
test-utils = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }
