[package]
name = "favkit"
version = "1.0.0"
edition = "2024"
description = "A tool to manage macOS Finder sidebar items"
authors = ["Maksim Shcherbo <max@happygopher.nl>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "favkit"
path = "src/main.rs"

[dependencies]
core-foundation = "0.10.0"
core-services = "1.0.0"
thiserror = "2.0.8"
dirs = "5.0"

[dev-dependencies]
favkit = { path = "." }
cargo-llvm-cov = "0.6.14"
pretty_assertions = "1.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
