[package]
name = "favkit"
version = "0.5.0"
edition = "2024"
description = "A tool to manage macOS Finder sidebar items"
authors = ["Maksim Shcherbo <max@happygopher.nl>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "favkit"
path = "src/main.rs"

[dependencies]
core-foundation = "0.10.0"
core-services = "1.0.0"
thiserror = "2.0.9"
dirs = "5.0"

[dev-dependencies]
favkit = { path = "." }
cargo-llvm-cov = "0.6.15"
pretty_assertions = "1.4.0"
mockall = "0.13.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
